# easymath

./: .gitignore  ContributingtoEasyMath.md  MANIFEST.in  MIT License.md  README.md  pyproject.toml  setup.cfg  setup.py  test_easymath_demo.py  test_vector_demo.py
.github/: pull_request_template.md
.github/workflows/: python-package.yml
easymath/: __init__.py  cli.py  core.py  examples.py  exceptions.py
realmaths/: __init__.py  core.py
tests/: __init__.py  test_easymath.py
